load("@build_stack_rules_proto//rules:proto_compiled_sources.bzl", "proto_compiled_sources")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "worker_protocol_proto",
    srcs = ["worker_protocol.proto"],
    visibility = ["//visibility:public"],
)

proto_compiled_sources(
    name = "worker_protocol_go_compiled_sources",
    srcs = ["worker_protocol.pb.go"],
    output_mappings = ["worker_protocol.pb.go=github.com/bazel-contrib/bcr-frontend/gazelle/blaze/worker/worker_protocol/worker_protocol.pb.go"],
    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
    proto = "worker_protocol_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "worker",
    srcs = ["worker_protocol.pb.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/blaze/worker",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
