load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bazelhelpcompiler_lib",
    srcs = ["bazelhelpcompiler.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/bazelhelpcompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/help/v1:help",
        "//pkg/protoutil",
    ],
)

go_binary(
    name = "bazelhelpcompiler",
    embed = [":bazelhelpcompiler_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bazelhelpcompiler_test",
    srcs = ["parse_test.go"],
    embed = [":bazelhelpcompiler_lib"],
)
