load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bazelhelpregistrycompiler_lib",
    srcs = ["bazelhelpregistrycompiler.go"],
    importpath = "github.com/stackb/centrl/cmd/bazelhelpregistrycompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/bzlmod/v1:bzlmod",
        "//pkg/protoutil",
    ],
)

go_binary(
    name = "bazelhelpregistrycompiler",
    embed = [":bazelhelpregistrycompiler_lib"],
    visibility = ["//visibility:public"],
)
