load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cfdeploy_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/cfdeploy",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cf"],
)

go_binary(
    name = "cfdeploy",
    embed = [":cfdeploy_lib"],
    visibility = ["//visibility:public"],
)
