load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "codesearch_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/codesearch",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/livegrep/v1:livegrep",
        "//pkg/codesearch",
        "@com_github_junkblocker_codesearch//index:go_default_library",
    ],
)

go_binary(
    name = "codesearch",
    embed = [":codesearch_lib"],
    visibility = ["//visibility:public"],
)
