load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "codesearchcompiler_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/codesearchcompiler",
    visibility = ["//visibility:private"],
    deps = ["@com_github_junkblocker_codesearch//index:go_default_library"],
)

go_binary(
    name = "codesearchcompiler",
    embed = [":codesearchcompiler_lib"],
    visibility = ["//visibility:public"],
)
