load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "colorcompiler_lib",
    srcs = ["colorcompiler.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/colorcompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/css",
        "//pkg/paramsfile",
        "@com_github_teacat_noire//:go_default_library",
    ],
)

go_binary(
    name = "colorcompiler",
    embed = [":colorcompiler_lib"],
    visibility = ["//visibility:public"],
)
