load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "documentationcompiler_lib",
    srcs = ["main.go"],
    importpath = "github.com/stackb/centrl/cmd/documentationcompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/bzlmod/v1:bzlmod",
        "//pkg/protoutil",
        "//pkg/stardoc",
        "//stardoc_output",
    ],
)

go_binary(
    name = "documentationcompiler",
    embed = [":documentationcompiler_lib"],
    visibility = ["//visibility:public"],
)
