load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "documentationregistrycompiler_lib",
    srcs = ["main.go"],
    importpath = "github.com/stackb/centrl/cmd/documentationregistrycompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/documentation/v1:documentation",
        "//pkg/protoutil",
    ],
)

go_binary(
    name = "documentationregistrycompiler",
    embed = [":documentationregistrycompiler_lib"],
    visibility = ["//visibility:public"],
)
