load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "modulecompiler_lib",
    srcs = ["modulecompiler.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/modulecompiler",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "//pkg/metadatajson",
        "//pkg/paramsfile",
        "//pkg/protoutil",
        "//pkg/repositorymetadatajson",
    ],
)

go_binary(
    name = "modulecompiler",
    embed = [":modulecompiler_lib"],
    visibility = ["//visibility:public"],
)
