load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "moduleregistrysymbolscompiler_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/moduleregistrysymbolscompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/symbol/v1:symbol",
        "//pkg/protoutil",
    ],
)

go_binary(
    name = "moduleregistrysymbolscompiler",
    embed = [":moduleregistrysymbolscompiler_lib"],
    visibility = ["//visibility:public"],
)
