load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "moduleversioncompiler_lib",
    srcs = ["moduleversioncompiler.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/moduleversioncompiler",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "//build/stack/bazel/symbol/v1:symbol",
        "//pkg/attestationsjson",
        "//pkg/modulebazel",
        "//pkg/paramsfile",
        "//pkg/presubmityml",
        "//pkg/protoutil",
        "//pkg/sourcejson",
    ],
)

go_binary(
    name = "moduleversioncompiler",
    embed = [":moduleversioncompiler_lib"],
    visibility = ["//visibility:public"],
)
