load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "registrycompiler_lib",
    srcs = ["registrycompiler.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/registrycompiler",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "//build/stack/bazel/symbol/v1:symbol",
        "//pkg/gh",
        "//pkg/paramsfile",
        "//pkg/protoutil",
    ],
)

go_binary(
    name = "registrycompiler",
    embed = [":registrycompiler_lib"],
    visibility = ["//visibility:public"],
)
