load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "releaseserver_lib",
    srcs = ["main.go"],
    importpath = "github.com/stackb/centrl/cmd/releaseserver",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "releaseserver",
    embed = [":releaseserver_lib"],
    visibility = ["//visibility:public"],
)
