load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sitemapcompiler_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/sitemapcompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "//pkg/protoutil",
    ],
)

go_binary(
    name = "sitemapcompiler",
    embed = [":sitemapcompiler_lib"],
    visibility = ["//visibility:public"],
)
