load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "stardoccompiler_lib",
    srcs = ["main.go"],
    importpath = "github.com/stackb/centrl/cmd/stardoccompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "//pkg/protoutil",
        "//pkg/stardoc",
        "//stardoc_output",
    ],
)

go_binary(
    name = "stardoccompiler",
    embed = [":stardoccompiler_lib"],
    visibility = ["//visibility:public"],
)
