load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "statichtmlcompiler_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/statichtmlcompiler",
    visibility = ["//visibility:private"],
    deps = ["@com_github_chromedp_chromedp//:go_default_library"],
)

go_binary(
    name = "statichtmlcompiler",
    embed = [":statichtmlcompiler_lib"],
    visibility = ["//visibility:public"],
)
